# ring-star-problem

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
results/: experiment_results.txt
src/: functions.py  main.py  metaheuristics.py
src/ring_star/: __init__.py  __main__.py  functions.py  main.py  metaheuristics.py
